# babel

./: .gitignore  CMakeLists.txt  DumbKnights.sln  README.md
Assets/data/: map1.map  tileset1.cfg
Assets/shaders/: first.vert  first.vert.spv  texture.vert  texture.vert.spv
Babel/: CMakeLists.txt  Game.cpp  Game.h  Locator.cpp  Locator.h  Main.cpp
Babel/components/: Components.h  ControllerSystem.h  Move2DSystem.h  RenderingSystem.cpp
Babel/data/: AnimationData.cpp  AnimationData.h
Babel/scene/: GameMap.cpp  IScene.h  SceneManager.cpp
Babel/world/: TileInfo.cpp  TileInfo.h  TileMap.cpp  TileMap.h
DumbKnights/: CMakeLists.txt  DumbKnights.vcxproj  Game.cpp  Game.h  Locator.h  Main.cpp
DumbKnights/components/: AnimationSystem.cpp  AnimationSystem.h  CMakeLists.txt  Components.h  ControllerSystem.cpp  Move2DSystem.cpp  Move2DSystem.h  RenderingSystem.cpp  RenderingSystem.h
DumbKnights/data/: AnimationData.h  CMakeLists.txt  IData.h
DumbKnights/scene/: CMakeLists.txt  GameMap.cpp  GameMap.h  GamePause.cpp  GamePause.h  IScene.h  SceneManager.cpp  SceneManager.h  SceneType.h
DumbKnights/world/: CMakeLists.txt  TileInfo.cpp  TileInfo.h  TileMap.cpp  TileMap.h
Gaemi-00/: Asserts.h  CMakeLists.txt  Define.cpp  Define.h  Defines.h  Engine.cpp  Engine.h  Entry.cpp  Entry.h  EventManager.cpp  EventManager.h  Events.h  Gaemi-00.cpp  Gaemi-00.h  Gaemi-00.vcxproj  Gaemi-00.vcxproj.filters  Gaemi.cpp  Gaemi.h  GameTime.h  IGame.h  ILocator.h  InputManager.h  Locator.cpp  Locator.h  Log.cpp  Log.h  Timer.cpp  Timer.h  Upimpl.h  VectorUtils.cpp  VectorUtils.h  Window.cpp  Window.h  dllmain.cpp  pch.h
Gaemi-00/asset/: AssetManager.cpp  AssetManager.h  Assets.cpp  Assets.h  CMakeLists.txt  Files.cpp  Files.h
Gaemi-00/ecs/: CMakeLists.txt  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  Components.h  Coordinator.cpp  Coordinator.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h
Gaemi-00/input/: CMakeLists.txt  ControllerState.cpp  ControllerState.h  InputManager.cpp  InputManager.h  KeyboardState.cpp  KeyboardState.h  MouseState.cpp  MouseState.h
Gaemi-00/math/: CMakeLists.txt  Color.cpp  Color.h  Functions.cpp  Functions.h  Rectangle.cpp  Rectangle.h  RectangleInt.cpp  RectangleInt.h  Vec2.cpp  Vec2.h  Vec2i.cpp  Vec2i.h
Gaemi-00/render/: CMakeLists.txt  IPipeline.h  IRenderer.h  IWindow.h  RenderRequest.h  Texture.cpp  Texture.h
Gaemi-00/render/sdl/: CMakeLists.txt  RendererSDL.cpp  RendererSDL.h  Texture.cpp  Texture.h  WindowSdl.cpp  WindowSdl.h
Gaemi-00/render/vulkan/: CMakeLists.txt  Commands.h  Device.h  Frame.h  FrameBuffer.h  Instance.h  Memory.cpp  Memory.h  Mesh.cpp  Mesh.h  Pipeline.h  QueueFamilies.h  RenderData.h  RendererVulkan.cpp  RendererVulkan.h  Shader.h  Swapchain.h  Sync.h  TestScene.cpp  TestScene.h  TextScene.cpp  TextureGPU.cpp  TextureGPU.h  VertexBufferAtlas.cpp  VertexBufferAtlas.h  WindowVulkan.cpp  WindowVulkan.h
SDL/DumbKnights/: Main.cpp
SDL/DumbKnights/x64/Debug/: DumbKnights.exe.recipe  vc143.idb
SDL/DumbKnights/x64/Debug/DumbKnights.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SDL/Gaemi-00/: Engine.h  Gaemi-00.vcxproj.filters  IGame.h  InputManager.cpp  Timer.h  cpp.hint
SDL/Gaemi-00/x64/Debug/: Gaemi00.dll.recipe  vc143.idb
SDL/Gaemi-00/x64/Debug/Gaemi-00.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gaemi-00.lastbuildstate  Gaemi-00.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
Unreal/DumbKnights/: DumbKnights.uproject
Unreal/DumbKnights/Config/: DefaultEngine.ini  DefaultGame.ini
Unreal/DumbKnights/Content/: Map.umap
Unreal/DumbKnights/Content/Blueprints/: BP_TileGrass.uasset  BP_TileMap.uasset  BP_TileSand.uasset  S_TileGrass.uasset  S_TileSand.uasset
Unreal/DumbKnights/Content/Textures/: T_TileGrass.uasset  T_TileSand.uasset
Unreal/DumbKnights/Source/: DumbKnights.Target.cs  DumbKnightsEditor.Target.cs
Unreal/DumbKnights/Source/DumbKnights/: DumbKnights.Build.cs  DumbKnights.cpp  DumbKnightsGameModeBase.cpp  DumbKnightsGameModeBase.h  MapGameMode.cpp  MapGameMode.h  TileActor.cpp  TileActor.h  TileMapActor.cpp  TileMapActor.h
